<resources>
    <string name="app_name">Car Rental</string>
    <string name="start_riding">Start riding</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_in">sign in</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="welcome_to_car_rental_app">Welcome To Vehicle Rental App</string>
    <string name="continue_">Continue</string>
    <string name="app_logo">app_logo</string>
    <string name="content_description_for_slider_item">Car Images</string>
    <string name="microsoft">Microsoft</string>
    <string name="get_my_location">Get My Location</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">
        <ul>
            <li><b><font color="#0052A2" size="20">About Us\n</font></b></li>
                <p>We are connecting people to the best vehicle rental companies through our vehicle rental system, which consists of this application and <a href="https://www.example.com">our website</a> \n\n\n</p>
            <li><b><font color="#0052A2" size="20">What we can provide for you?\n</font></b></li>
                <p>Through these platforms, we allow you to rent your favourite vehicle for one or more days in the easiest way. You can also compare prices, specs, and more from hundreds of rental companies.\n\n\n</p>

            <li><b><font color="#0052A2" size="20">Developer Team</font></b></li>\n
                <p>We made up of talents from diverse experiences, with room for the exchange of knowledge and unique experiences, all of this while focusing on excellence and innovation.\n\n\n</p>

            <li><b><font color="#0052A2" size="20">Terms And Conditions</font></b></li>\n
                <a href="https://www.example.com/privacy">Privacy Policy</a>\n
                <a href="https://www.example.com">Policy Terms</a>\n\n\n

            <li><b><font color="#0052A2" size="20">Contact Developers</font></b></li>\n
                <a href="mailto: AmrAshraf_inf@outlook.com">AmrAshraf_inf@outlook.com</a>\n
                <a href="mailto: mmohamedHany@gmail.com">mmohamedHany@gmail.com</a>\n\n\n
        </ul>
    </string>
    <string name="Privacy"><b><font color="#0052A2" size="20">Introduction\n</font></b>
        <p>When you use "Vehicle Rental App", you trust us with your personal data. We’re committed to keeping that trust. That starts with helping you understand our privacy practices.  \nThis notice describes the personal data we collect, how it’s used and shared, and your choices regarding this data. We recommend that you read this along with our privacy overview, which highlights key points about our privacy practices.</p>
        <p>\n\n\n</p><b><font color="#0052A2" size="20">Data collections\n</font></b>
        <p>We are collect personal data provided by users to our system, such as during account creation created during use of our services, such as location, app usage, and device data. from other sources, such as other users or account owners, business partners, vendors, insurance and financial solution providers, and governmental authorities</p>
        <p>\n\n\n</p><b><font color="#0052A2" size="20">Application Permissions\n</font></b>
        <p>By using this application, you accept the following permissions:\n1) INTERNET\n2) LOCATION\n3) STORAGE</p>
        <p>\n\n\n</p><b><font color="#0052A2" size="20">Updates to this notice\n</font></b>
        <p>We may occasionally update this notice.\nWe may occasionally update this notice. If we make significant changes, we will notify users in advance of the changes through our app or through other means, such as email. We encourage users to periodically review this notice for the latest information on our privacy practices.\nUse of our services after an update constitutes consent to the updated notice to the extent permitted by law.</p>
        <p>\n\n\n</p>
    </string>



</resources>