<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/main_txtView_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/welcome_to_car_rental_app"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="20sp">
    </TextView>
    <ImageView
        android:id="@+id/main_imgView_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/img_logo_test"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_logo">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"

        android:orientation="vertical" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:text="@string/continue_"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/white"
            android:background="@drawable/ic_btn_rounded"
            app:elevation="4dp"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_btn_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/continue_as_guest"
            android:background="@drawable/ic_btn_rounded"
            android:clickable="true"
            android:focusable="true"
            app:elevation="4dp"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V.1.0"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp">
        </TextView>
    </LinearLayout>
</LinearLayout>