<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/signIn_txtView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/dark_blue"
                app:layout_constraintVertical_bias="0.01"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="40sp"
                android:gravity="center"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/signIn_txtView_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_to_continue"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                app:layout_constraintVertical_bias="0.9"

                app:layout_constraintTop_toTopOf="@id/signIn_txtView_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/signIn_txtField_email">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signIn_txtField_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintTop_toBottomOf="@id/signIn_txtView_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signIn_edTxt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="32"
                    android:singleLine="true"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signIn_txtField_pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintTop_toBottomOf="@id/signIn_txtField_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signIn_edTxt_pswd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:singleLine="true">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/signIn_txtView_forgetPswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintVertical_bias="0.1"
                android:clickable="true"
                android:focusable="true"

                app:layout_constraintTop_toBottomOf="@id/signIn_txtField_pswd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/signIn_btn_signIn"
                android:textStyle="bold">
            </TextView>

            <Button
                android:id="@+id/signIn_btn_signIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent=".6"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/signIn_txtView_forgetPswd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="16sp"
                android:text="@string/sign_in"
                android:background="@drawable/ic_btn_rounded"
                android:textAllCaps="false">
            </Button>


            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/signIn_progressBar"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/signIn_btn_signIn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/signIn_btn_signIn"
                app:layout_constraintStart_toStartOf="@id/signIn_btn_signIn">

            </ProgressBar>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

<!--
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/signIn_floatBtn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_google"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/white"
                app:elevation="6dp"
                app:tint="@null"
                app:fabSize="mini"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/signIn_btn_signIn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/signIn_floatBtn_2"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/google">
            </com.google.android.material.floatingactionbutton.FloatingActionButton>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/signIn_floatBtn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/white"
                app:elevation="6dp"
                app:tint="@null"
                app:fabSize="mini"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_microsoft"
                app:layout_constraintTop_toBottomOf="@id/signIn_btn_signIn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/signIn_floatBtn_3"
                app:layout_constraintStart_toEndOf="@id/signIn_floatBtn_1"
                android:contentDescription="@string/microsoft">
            </com.google.android.material.floatingactionbutton.FloatingActionButton>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/signIn_floatBtn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/blue"
                app:elevation="6dp"
                app:tint="@color/white"
                app:fabSize="mini"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_facebook"
                app:layout_constraintTop_toBottomOf="@id/signIn_btn_signIn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/signIn_floatBtn_2"
                android:contentDescription="@string/facebook">
            </com.google.android.material.floatingactionbutton.FloatingActionButton>

        </androidx.constraintlayout.widget.ConstraintLayout>
 -->

</androidx.constraintlayout.widget.ConstraintLayout>